[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/HealthBar.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.615686, 0.172549, 0.172549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.501961, 0.647059, 0.596078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.501961, 0.647059, 0.596078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id=3]

[node name="HealthView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnderBar" type="ProgressBar" parent="."]
margin_right = 320.0
margin_bottom = 48.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 80.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
custom_styles/bg = SubResource( 3 )
value = 50.0

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="FlashTween" type="Tween" parent="."]
